# pwr_AiZO_project1

./: CMakeLists.txt
include/: DataGeneration.h  Heap.h  Insertion.h  Quick.h  Shell.h  SortingAlgorithm.h  UserInterface.h
src/: Heap.cpp  Insertion.cpp  Quick.cpp  Shell.cpp  SortingAlgorithm.cpp  UserInterface.cpp  main.cpp
tests/: test_SortingAlgorithm.cpp  test_sizeOneArray.cpp
